<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestAppSolution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="alreadyaccount">Already have an account? SignIn</string>
    <string name="calendar">Calendar</string>
    <string name="age">Age</string>
    <string name="donthaveaccount">Don\'t have an account? SignUp</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="duedate">Due date</string>
    <string name="save">Save</string>
</resources>