<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@android:color/transparent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@android:color/transparent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="3"
            android:singleLine="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duedate"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:drawableRight="@drawable/ic_baseline_calendar_today_24"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/save"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"/>

</androidx.constraintlayout.widget.ConstraintLayout>