<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.SignInFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            app:startIconDrawable="@android:drawable/ic_dialog_email"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tv_alreadyuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="end"
            android:autoLink="all"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/donthaveaccount"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_alreadyuser"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>